--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <div class="container mx-auto">
       <h1 class="text-lg font-bold tracking-tight text-gray-700">Hello World!</h1>
     </div>
+    <div>button</div>
+    <div>button</div>
   </body>
   <script src="./index.js"></script>
 </html>
